# DJCat-Pro-5

./: .gitignore  README.md  deploy.py  djcat.py  pyproject.toml  requirements.txt
.github/workflow/: build.yml
.github/workflows/: main.yml
app/common/: config.py  signal_bus.py
app/view/: broadcast_page.py  home_page.py  main_window.py  setting_page.py
app/view/components/: tray.py
